try fix launcher test job

--- a/.github/workflows/runLauncherTest.yml
+++ b/.github/workflows/runLauncherTest.yml
@@ -12,7 +12,11 @@ jobs:
           distribution: zulu
           java-version: 11
       - name: Tests
-        run: gradle :ide-launcher:test
+        run: |
+          export DISPLAY=:99.0
+          Xvfb -ac :99 -screen 0 1920x1080x24 &
+          sleep 10
+          gradle :ide-launcher:test
       - name: Save fails report
         if: ${{ failure() }}
         uses: actions/upload-artifact@v2
